@@ -11,6 +11,8 @@ ext.junitJupiterVersion  = '5.9.2'
 
 apply plugin: 'org.junit.platform.gradle.plugin'
 
+applicationDefaultJvmArgs = ["-Djdk.attach.allowAttachSelf=true"]
+
 dependencies {
     testImplementation project(':junit5git')
 
